# ubisoft_task

./: CMakeLists.txt  README.MD  main.cpp
shaders/: fragment.vert  shader.frag
src/: camera.cpp  cube.cpp  input_handler.cpp  main.cpp  utils.cpp
src/headers/: camera.h  cube.h  input_handler.h  utils.h
src/shaders/: bloom_bright.frag  bloom_final.frag  blur.frag  shader.frag  shader.vert
src/source_files/: camera.cpp  cube.cpp  input_handler.cpp  utils.cpp
